Update meta description and title for improved clarity on task management

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     />
     <meta
       name="description"
-      content="In this to-do list you can add new tasks and you can also delete the tasks by clicking on them."
+      content="This task manager helps you keep track of your work by allowing you to create, complete, and delete tasks."
     />
-    <title>To-do list</title>
+    <title>Task</title>
   </head>
   <body>
     <div id="root"></div>
