Update page title from 'Task' to 'Tasks' for improved clarity

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       name="description"
       content="This task manager helps you keep track of your work by allowing you to create, complete, and delete tasks."
     />
-    <title>Task</title>
+    <title>Tasks</title>
   </head>
   <body>
     <div id="root"></div>
